# shyp

./: LICENSE  README.md  pyproject.toml
shyp/: bact.py  drom.py
shyp/bacts/: __init__.py
tests/: drom_test.py
